text bubbles are created

--- a/src/Body/Chat/Chat.scss
+++ b/src/Body/Chat/Chat.scss
@@ -4,4 +4,32 @@
     margin-top: 80px;
     margin-left: 5px;
     overflow-y: auto;
+    #me {
+        justify-content: flex-end;
+    }
+    #bot {
+        justify-content: flex-end;
+    }
+    .message{
+        height: auto;
+        padding: 10px;
+        display: flex;
+        .message-content{
+            width: auto;
+            height: auto;
+            min-height: 40px;
+            max-width: 420px;
+            background-color: #549e73;
+            border-radius: 5px;
+            color: white;
+            display: flex;
+            align-items: center;
+            margin-right: 5px;
+            margin-left: 5px;
+            padding-right: 5px;
+            padding-left: 5px;
+            overflow-wrap: break-word;
+            word-break: break-word;
+        }
+    }
 }
