--- a/src/Header/Header.scss
+++ b/src/Header/Header.scss
@@ -6,42 +6,55 @@
     position: fixed;
     width: 100%;
     color: white;
-    background-color: #4f027c;
+    background-color: #3b027c;
+    margin-right: 20px;
     .header-left{
         flex: 0.3;
         display: flex;
         align-items: center;
         margin-left: 20px;
         .avatar{
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            background-color: white;
+            img{
+                width: 50px;
+                height: 50px;
+                border-radius: 50%;
+                background-color: white;
+                margin-right: 10px;
+            }
+        }
+        .user-info{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            .status{
+                width: 10px;
+                height: 10px;
+                background-color: yellowgreen;
+                border-radius: 50%;
+                margin-left: 10px;
+                margin-top: 4px;
+            }
         }
     }
     .header-middle{
-        flex: 0.5;
+        flex: 0.4;
         display: flex;
-        opacity: 1;
-        border-radius: 100px;
-        justify-content: flex-start;
+        justify-content: center;
         align-items: center;
-        color: grey;
-        border: 2px solid grey;
         padding: 5px;
-        background-color: var(--slack-search);
+        font-size: 20px;
+        font-weight: bold;
 
-        input{
-            width: 100%;
-            background: transparent;
-            border: none;
-            outline: none;
-            padding: 0 5px;
-            text-align: center;
-            color:white;
-        }
     }
     .header-right{
-        flex: 0.2;
+        flex: 0.3;
     }
+}
+
+@media only screen and (max-width:480px){
+   .header{
+       .header-left{
+           flex: 0.5;
+       }
+   }
 }
