Sidebar design changes

--- a/src/Body/Sidebar/Sidebar.scss
+++ b/src/Body/Sidebar/Sidebar.scss
@@ -1,5 +1,5 @@
 .chat-sidebar{
-    background-color: #4f027c;
+    background-color: #3b027c;
     margin-top: 70px;
     max-width: 260px;
     color:white;
