Chat auto scroll and design change

--- a/src/Body/Chat/Chat.scss
+++ b/src/Body/Chat/Chat.scss
@@ -4,12 +4,20 @@
     margin-top: 80px;
     margin-left: 5px;
     overflow-y: auto;
+    padding-bottom: 85px;
     #me {
         justify-content: flex-end;
-    }
+        .message-content{
+            background-color: #59a87a;
+        }
+      }
+
     #bot {
-        justify-content: flex-end;
+    justify-content: flex-start;
+    .message-content{
+        background-color: #317ada;
     }
+    }      
     .message{
         height: auto;
         padding: 10px;
@@ -19,7 +27,6 @@
             height: auto;
             min-height: 40px;
             max-width: 420px;
-            background-color: #549e73;
             border-radius: 5px;
             color: white;
             display: flex;
