--- a/src/UserBot/Userbot.scss
+++ b/src/UserBot/Userbot.scss
@@ -1,7 +1,7 @@
 .user-card{
+    box-sizing: border-box;
     display: flex;
     background-color: rgba(255, 255, 255, 0.459);
-    backdrop-filter: blur(4px);
     align-items: center;
     border-radius: 5px;
     padding: 5px;
@@ -12,13 +12,13 @@
         border: 1px solid white;
     }
     .profile-photo{
-
+        flex: 0.3;;
         display: flex;
         align-items: center;
         justify-content: center;
         img{
-            width: 40px;
-            height: 40px;
+            width: 45px;
+            height: 45px;
             border-radius: 50%;
             flex: 0.3;
             margin-right: 10px;
@@ -28,8 +28,34 @@
         flex:0.6;
         display: flex;
         align-items: center;
+        font-weight: bold;
     }
     .unread-message{
         flex: 0.1;
+        color: white;
+        background-color: red;
+        border-radius: 5px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+@media only screen and (max-width:480px){
+    .user-card{
+        flex-direction: column !important;
+        .username{
+            text-align: center;
+        }
+        .profile-photo{
+            img{
+                margin-right: 0px !important;
+            }
+        }
+        .unread-message{
+            &.exist{
+                padding: 2px 5px;
+            }
+        }
     }
 }
